objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>住所（1）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>住所（2）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3__c</fullName>
        <label>住所（3）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>AddressLine1__c + &apos; &apos; + AddressLine2__c + &apos; &apos; + AddressLine3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentCode__c</fullName>
        <externalId>true</externalId>
        <label>部署コード</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>電話番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>系列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <description>Used to set the order of display</description>
        <label>ソート番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SupervisorName__c</fullName>
        <label>責任者氏名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorPosition__c</fullName>
        <label>責任者役職</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>部署</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SortNo__c</columns>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>DepartmentCode__c</columns>
        <columns>SupervisorName__c</columns>
        <columns>Phone__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>AddressLine1__c</columns>
        <columns>AddressLine2__c</columns>
        <columns>AddressLine3__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>部署名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>